cmake_minimum_required(VERSION 2.8.3)
project(test_pkg)
find_package(catkin REQUIRED COMPONENTS roscpp std_msgs)
find_library(intelfpgaup_LIBRARIES NAMES libintelfpgaup.so PATHS /root/home/Linux_Libraries/C4DE)
catkin_package()
add_executable(publisher publisher.cpp)
add_executable(subscriber subscriber.cpp)
add_dependencies(publisher ${catkin_EXPORTED_TARGETS})
add_dependencies(subscriber ${catkin_EXPORTED_TARGETS})
target_link_libraries(publisher ${catkin_LIBRARIES} ${intelfpgaup_LIBRARIES})
target_link_libraries(subscriber ${catkin_LIBRARIES} ${intelfpgaup_LIBRARIES})
